# CD_collection

./: README.md  config.py  main.py  pyproject.toml
bengans_scraper/: __init__.py
bengans_scraper/extract/: __init__.py
bengans_scraper/extract/scripts/: fetch_data.py  web_driver.py
bengans_scraper/load/: __init__.py
bengans_scraper/load/scripts/: bigquery_connections.py  loader.py  orchestration.py
bengans_scraper/models/: data_model.py  data_model_schema.py
bengans_scraper/transform/: __init__.py
bengans_scraper/transform/scripts/: filter_parm_handler.py  item_parser.py
config/: config.yaml
extract/config/: config.yaml
extract/scripts/: extract_genres.py  fetch_data.py  parser.py  scraper.py  web_driver.py
load/scripts/: loader.py  orchestration.py
transform/scripts/: data_loader.py
